--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 canvas{
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
